@@ -23,6 +23,7 @@ __author__  = 'Christian Heimes <tiran@cheimes.de>'
 __docformat__ = 'restructuredtext'
 
 
+import os
 import posixpath
 from copy import copy
 import logging
@@ -478,6 +479,9 @@ class ATCTFileContent(ATCTContent):
         f_name = field.getName()
         upload = REQUEST.form.get('%s_file' % f_name, None)
         filename = getattr(upload, 'filename', None)
+        if isinstance(filename, basestring):
+            filename = os.path.basename(filename)
+            filename = filename.split("\\")[-1]
         clean_filename = self._cleanupFilename(filename)
         used_id = (id and not self._isIDAutoGenerated(id)) and id or clean_filename
 
